[package]
name = "queue-rs"
version = "0.0.30"
edition = "2021"
description = "A Rust crate for queue"
license = "MIT OR Apache-2.0"
keywords = [ "queue", "blocking" ]
categories = [ "data-structures" ]
readme = "README.md"
repository = "https://github.com/j5ik2o/queue-rs"

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
log = "0.4"

[dev-dependencies]
env_logger = "0.10.1"
fp_rust = "0.3.5"
