[package]
name = "queue-rs"
version = "0.0.30"
edition = "2021"
description = "A Rust crate for queue"
license = "MIT OR Apache-2.0"
keywords = ["queue", "blocking"]
categories = ["data-structures"]
readme = "README.md"
repository = "https://github.com/j5ik2o/queue-rs"

[dependencies]
anyhow = "1.0.76"
thiserror = "1.0.52"
log = "0.4"
tokio = { version = "1", features = ["sync", "macros", "rt", "test-util"], optional = false }
async-trait = { version = "0.1.74", optional = false }
tokio-condvar = { version = "0.1.0", optional = false }
futures = { version = "0.3", optional = false }


#[features]
#tokio-support = ["tokio", "async-trait", "tokio-condvar", "futures"]

[dev-dependencies]
env_logger = "0.10.1"
fp_rust = "0.3.5"
serial_test = "2.0.0"
criterion = "0.5"

[[bench]]
name = "bench_main"
harness = false