[package]
name = "queue-rs"
version = "0.0.30"
edition = "2021"
description = "A Rust crate for queue"
license = "MIT OR Apache-2.0"
keywords = ["queue", "blocking"]
categories = ["data-structures"]
readme = "README.md"
repository = "https://github.com/j5ik2o/queue-rs"

[dependencies]
anyhow = "1.0.82"
thiserror = "1.0.59"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["sync", "macros", "rt", "test-util"], optional = false }
async-trait = { version = "0.1.80", optional = false }
tokio-condvar = { version = "0.3.0", optional = false }
futures = { version = "0.3.30", optional = false }


#[features]
#tokio-support = ["tokio", "async-trait", "tokio-condvar", "futures"]

[dev-dependencies]
env_logger = "0.11.3"
fp_rust = "0.3.5"
serial_test = "3.1.1"
criterion = "0.6.0"

[[bench]]
name = "bench_main"
harness = false